<resources>
    <string name="app_name">talkPal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_comment_list">Comment List</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_choose">Choose</string>
    <string name="title_activity_become_teacher">Become Teacher</string>
    <string name="title_activity_Location">Location</string>
    <string name="title_activity_done_order">Done Order</string>

    <!-- Strings related to login -->
    <string name="Phone_number">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_verification">Verification Code</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">register</string>
    <string name="getCode">getCode</string>
    <string name="chinese_name">脱口派</string>
    <string name="be_good_template">做你最信任的外教预约平台</string>

    <string name="loading">loading...</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">WeChat payment results：%s</string>
    <string name="hint_first_bind">For the first time, please bind the phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_verify_number">Get verification code</string>
    <string name="verify_number">Verification code</string>
    <string name="sure">Confirm</string>
    <string name="login">Login</string>
    <string name="begin_time">Start time</string>
    <string name="pick_time">Choose Time</string>
    <string name="pick_date">Choose Date</string>
    <string name="order_duration">Duration：</string>
    <string name="expect_time">Place of expectation</string>
    <string name="search_from_map">Map search</string>
    <string name="overall_evaluation">Overall Evaluation</string>
    <string name="please_fill_comment">Please fill in the evaluation after the class of the
        teacher...</string>
    <string name="commit">Commit</string>
    <string name="appointment_foreign">Appointment of foreign teachers</string>
    <string name="duration">Duration：</string>
    <string name="time">Time：</string>
    <string name="location">Location：</string>
    <string name="total">Total：</string>
    <string name="payment_method">Payment Method</string>
    <string name="wx_pay">WeChat payment</string>
    <string name="confirm_appointment">Confirm an appointment</string>
    <string name="confirm">Confirm</string>
    <string name="from">From</string>
    <string name="language">Language</string>
    <string name="teacher_profile">Teacher profile</string>
    <string name="user_comment">User comments</string>
    <string name="check_more">See more</string>
    <string name="click_to_order">Make An Appointment</string>
    <string name="nickname">Nickname</string>
    <string name="exit">Logout</string>
    <string name="please_fill_location">Please enter the address</string>
    <string name="password">Password</string>
    <string name="use_wx_login">Use third party login</string>
    <string name="foreign_teacher">Teacher</string>
    <string name="order">Appointment</string>
    <string name="user_center">Personal center</string>
    <string name="name">Name</string>
    <string name="register_allow">To register and to read and to agree to</string>
    <string name="protocol">《Talkpal服务使用协议》</string>
    <string name="about_us">About us</string>
    <string name="contact_service">Contact service</string>
    <string name="user_feedback">User feedback</string>
    <string name="version">Version</string>
    <string name="ongoing_order">Recent appointments</string>
    <string name="finished_order">History appointments</string>
    <string name="become_teacher">Become talkpal teacher</string>
    <string name="help">Help</string>
    <string name="login_first">Login first</string>
    <string name="no_order">You don\'t have an appointment.</string>
    <string name="date_time">time：</string>
    <string name="use_language">Use language</string>
    <string name="teach_language">Teach language</string>
    <string name="location_weizhi">location</string>
    <string name="price">price</string>
    <string name="speciality">speciality</string>
    <string name="load_failed_try_again">Load failed, please try again</string>
    <string name="sex">sex</string>
    <string name="search">search</string>
</resources>
