<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:foreground="?attr/selectableItemBackground"
	>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:paddingTop="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_vertical"
        android:orientation="horizontal">
        
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/iv_teacher"
			xmlns:fresco="http://schemas.android.com/apk/res-auto"
            android:layout_width="45dp"
            android:layout_height="45dp"
			fresco:placeholderImage="@mipmap/default_avatar"
			fresco:roundAsCircle="true"
			/>
		<View 
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="0dp"
		    />
		
		<LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_teacher_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/big_text"
			android:textColor="@color/font_black"
            android:text="Luwam" />
        
        <TextView
            android:id="@+id/tv_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
			android:textSize="@dimen/teacher_textsize_nomarl"
            android:textColor="#F68A1E"
            android:text="待处理" />
        
        </LinearLayout>
        
    </LinearLayout>

	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp" 
        android:orientation="horizontal">

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:textColor="@color/font_gray"
			android:textSize="@dimen/teacher_textsize_nomarl"
		    android:text="@string/duration" />

		<TextView
		    android:id="@+id/tv_duration"
		    android:layout_width="0dp"
			android:layout_weight="1"
		    android:layout_height="wrap_content"
			android:gravity="right"
			android:textColor="@color/font_black"
			android:textSize="@dimen/teacher_textsize_nomarl"
			android:singleLine="true"
			android:ellipsize="end"
		    android:text="12月15日 上午10:00" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" 
        android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/font_gray"
			android:textSize="@dimen/teacher_textsize_nomarl"
		    android:text="@string/location" />

		<TextView
		    android:id="@+id/tv_location"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:textColor="@color/font_black"
			android:textSize="@dimen/teacher_textsize_nomarl"
			android:singleLine="true"
			android:ellipsize="end"
		    android:text="12月15日 上午10:00" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp" 
        android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="@color/font_gray"
			android:textSize="@dimen/teacher_textsize_nomarl"
		    android:text="@string/date_time" />

		<TextView
		    android:id="@+id/tv_time"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:textColor="@color/font_black"
			android:textSize="@dimen/teacher_textsize_nomarl"
			android:singleLine="true"
			android:ellipsize="end"
		    android:text="12月15日 上午10:00" />
        
    </LinearLayout>
    

</LinearLayout>

</android.support.v7.widget.CardView>