<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.example.qiang_pc.newtalkpal.viewmodels.DetailActivityViewmodel"/>
        <variable
            name="data"
            type="com.example.qiang_pc.newtalkpal.bean.TeacherBean.DataEntity"/>
    </data>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_all"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >

                <com.zhy.autolayout.AutoRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="512px"
                    android:background="#ffffff"
                    >

                    <com.example.qiang_pc.newtalkpal.widget.AutoScrollViewPager
                        android:id="@+id/autoView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />

                    <LinearLayout
                        android:id="@+id/ll_dots"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:orientation="horizontal">
                    </LinearLayout>
                </com.zhy.autolayout.AutoRelativeLayout>

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="15dp"
                    >

                    <com.zhy.autolayout.AutoRelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{data.first_name}"
                            android:textSize="@dimen/big_text"
                            />

                        <com.zhy.autolayout.AutoLinearLayout
                            android:id="@+id/ll_from"
                            android:layout_width="350px"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingRight="10dp"
                                android:text="@string/from"
                                android:textColor="#888888"
                                android:textSize="@dimen/nomal_text"/>

                            <TextView
                                android:id="@+id/tv_from"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:paddingRight="20dp"
                                android:singleLine="true"
                                android:text="@{data.from}"
                                android:textSize="@dimen/nomal_text"/>
                        </com.zhy.autolayout.AutoLinearLayout>

                        <com.zhy.autolayout.AutoLinearLayout
                            android:layout_width="350px"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_below="@id/ll_from"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="right"
                                android:paddingRight="10dp"
                                android:paddingTop="10dp"
                                android:text="@string/language"
                                android:textColor="#888888"
                                android:textSize="@dimen/nomal_text"/>

                            <TextView
                                android:id="@+id/tv_language"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ellipsize="end"
                                android:paddingRight="20dp"
                                android:paddingTop="10dp"
                                android:singleLine="true"
                                android:text="@{data.languages}"
                                android:textSize="@dimen/nomal_text"/>
                        </com.zhy.autolayout.AutoLinearLayout>
                    </com.zhy.autolayout.AutoRelativeLayout>

                    <LinearLayout
                        android:id="@+id/ll_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/brief_hourly"
                        android:drawablePadding="10dp"
                        android:paddingTop="10dp"
                        android:text="@{DetailActivityViewmodel.formatPrice(data.price)}"
                        android:textColor="#02C9FC"
                        android:textSize="@dimen/teacher_textsize_nomarl"
                        />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/brief_loca"
                        android:drawablePadding="10dp"
                        android:paddingTop="10dp"
                        android:text="@{data.location}"
                        android:textSize="@dimen/teacher_textsize_nomarl"
                        />

                </com.zhy.autolayout.AutoLinearLayout>

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35px"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="15dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/teacher_info"
                        android:drawablePadding="10dp"
                        android:text="@string/teacher_profile"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_summary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="15dp"
                        android:text="@{data.cn_description}"/>

                </com.zhy.autolayout.AutoLinearLayout>

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35px"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="15dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/teacher_info"
                        android:drawablePadding="10dp"
                        android:text="About"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="15dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="15dp"
                        android:text="@{data.en_description}"/>

                </com.zhy.autolayout.AutoLinearLayout>

                <LinearLayout
                    android:id="@+id/ll_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35px"
                    android:background="#ffffff"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:visibility="gone"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/teacher_comment"
                        android:drawablePadding="10dp"
                        android:text="@string/user_comment"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/view_line"/>

                    <com.example.qiang_pc.newtalkpal.widget.ListViewForScrollView
                        android:id="@+id/id_lvfsv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </com.example.qiang_pc.newtalkpal.widget.ListViewForScrollView>

                    <TextView
                        android:id="@+id/tv_showmore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/check_more"
                        android:textColor="#FCB74A"
                        android:textSize="18sp"
                        android:visibility="gone"
                        />

                </LinearLayout>
            </com.zhy.autolayout.AutoLinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:text="@string/click_to_order"
            android:textColor="#ffffff"
            android:textSize="@dimen/big_text"/>

    </com.zhy.autolayout.AutoLinearLayout>
</layout>